# GA_Floor_Height

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .ruff.toml  .secrets.baseline  0.1.1  1.8.0  5_Split_GSV_training_samples.ipynb  Clip_GSV_panoramas.ipynb  Convert_LabelMe_YOLO.ipynb  Dockerfile  Download_GSV_data.ipynb  Download_GSV_pano_depth_Launceston.ipynb  Download_GSV_pano_depth_Wagga.ipynb  Extract_ground_elevations.ipynb  FFH_estimation.ipynb  FFH_estimation_GSV.ipynb  FFH_estimation_GSV_OneFormer.ipynb  FFH_estimation_GSV_YOLO.ipynb  FFH_estimation_RICS_simplified.ipynb  Inference_evaluate_pretrained_OneFormer.ipynb  Inference_pretrained_OneFormer_No_Evaluation.ipynb  Inference_yolov5.ipynb  README.md  RICS_query_download.ipynb  Run_LabelMe.ipynb  Split_GSV_training_samples.ipynb  Split_training_points.ipynb  docker-compose.yml  environment.yml  geometry.py  mypy.ini  pyproject.toml  setup.py  setup.sh
.github/workflows/: ci.yml
GSV/: 0_Sample_training_data.ipynb  3_Convert_LabelMe_jsons.ipynb  4_Split_training_points.ipynb  6_Fine_tune_OneFormer_GSV.ipynb  6_Finetune_Yolo_GSV.ipynb  7_FFH_results_validation.ipynb  8_FFH_estimation_GSV_OneFormer.ipynb  8_FFH_estimation_GSV_YOLO.ipynb  Download_GSV_pano_depth_Launceston.ipynb  Estimate_GSV_gapfilling_depth.ipynb  Extract_camera_height_GSV.ipynb  Extract_ground_elevations.ipynb  FFH_estimation_GSV - Copy.ipynb  FFH_estimation_GSV - Launceston.ipynb  Groundtruth_FFH_checking.ipynb  Inference_pretrained_OneFormer_No_Evaluation.ipynb  Merge_vector_files_by_attribute.ipynb  README.md  Run_LabelMe_cmds.ipynb  geometry.py
RICS/: 0_Convert_RICS_database_to_geojson.ipynb  1_RICS_query_download.ipynb  3_Split_RICS_training_samples.ipynb  4_FFH_estimation_GSV_YOLO.ipynb  4_FFH_estimation_RICS_simplified.ipynb  Back_calculate_RICS_coordinates.ipynb  Estimate_RICS_focal_length.ipynb  README.md  Sensitivity_analysis_perspective_projection.ipynb  Sensitivity_test.ipynb  Split_training_points_RICS.ipynb
config/: common.yaml  launceston.yaml  tweed.yaml  wagga.yaml
data/: Final_Wagga.UFI.atx  Final_Wagga.dbf  Final_Wagga.shp  Final_Wagga.shp.xml  Final_Wagga.shx  all_aoi_ffh_v5_3a2a2ee6e864.gpkg
dem/: README.md  launceston_0_data_prep.ipynb  launceston_1_dem_at_gcp.ipynb  tweed_heads_0_data_prep.ipynb  tweed_heads_1_dem_at_gcp.ipynb  wagga_0_data_prep.ipynb  wagga_1_dem_at_gcp.ipynb
lidar/: 06_FFH_estimation_lidar_panoramas.ipynb  0_download_convert_trajectory_file.ipynb  1_Query_clip_point_cloud.ipynb  1_query_download_panoramas.ipynb  2_Clip_panoramas.ipynb  2_Filter_points_detect_facade_orientation.ipynb  2_Filter_points_project_to_facades.ipynb  3_query_clip_point_cloud.ipynb  4_project_points_to_facade_rasters.ipynb  5_Extract_lidar_ground_elevation.ipynb  6_FFH_estimation_lidar_panoramas.ipynb  7_FFH_results_validation.ipynb  Extract_lidar_ground_elevation.ipynb  Generate_tile_bbox_qa4mobile.ipynb  README.md  download_convert_trajectory_file.ipynb  point_cloud_processings.py  query_panoramas.ipynb
regression/: README.md  launceston_0_nexis_join.ipynb  launceston_1_inspection_and_prep.ipynb  launceston_2_floor_height_correlations.ipynb  launceston_3_floor_height_correlations_dem_deriv.ipynb  launceston_3_floor_height_rf.ipynb  launceston_4_regression_nexis.ipynb  launceston_5_regression_nexis_building_height.ipynb  wagga_0_inspection.ipynb  wagga_1_dem.ipynb  wagga_2_floor_height_correlations.ipynb  wagga_3_regression_model.ipynb  wagga_inspection.ipynb
sql/: 001_tables.sql  002_indexes.sql
src/floor_heights/: __init__.py  _version.py  cli.py  config.py  main.py  region_configs.yaml  training.py
src/floor_heights/cli/: __init__.py  main.py  stages.py  utils.py
src/floor_heights/cli/commands/: __init__.py  config.py  database.py  qa.py  viewer.py  visualize.py  yolo.py
src/floor_heights/db/: __init__.py  _utils.py  audit.py  constants.py  ibis_client.py  importers.py  initialize.py  loader.py  mappings.py  migrate.py  pipeline.py  reader.py  run_pipeline.py  schema.py  schemas.py
src/floor_heights/models/: __init__.py
src/floor_heights/pipeline/: __init__.py  stage01_clip_point_cloud.py  stage01_import_and_process_building_levels.py  stage02_download_convert_trajectory_file.py  stage02a_harvest_candidate_panoramas.py  stage02b_download_candidate_panoramas.py  stage03_clip_panoramas.py  stage03a_harvest_panoramas_geometries.py  stage03b_download_candidate_panoramas.py  stage04_clip_panoramas.py  stage04a_object_detection.py  stage04b_best_view_selection.py  stage05_clip_point_cloud.py  stage05_project_point_cloud_to_facade.py  stage06_extract_ground_elevation.py  stage06_project_points_to_facade_rasters.py  stage07_estimate_floor_height.py  stage07_extract_ground_elevation.py  stage08_object_detection.py  stage08_validate_results.py  stage09_estimate_floor_height.py  stage09a_compute_lidar_stats.py
src/floor_heights/qa/: __init__.py  classification_checks.py  geometric_checks.py  lidar_qa_base.py  lidar_qa_pipeline.py  noise_detection.py  run_qa.py
src/floor_heights/utils/: __init__.py  fh_io.py  geometry.py  point_cloud_processings.py  progress.py  s3_utils.py  visualization.py  yolo_utils.py
src/floor_heights/visualization/: .gitignore  __init__.py  index.html  lidar_viewer.py  package.json  server.py  tsconfig.json
src/floor_heights/visualization/src/: Annotator.tsx  App.jsx  index.css  main.jsx
src/floor_heights/visualization/web/: index.html
superseded/: Clip_GSV_panoramas.ipynb  Download_GSV_data.ipynb  depth.py
weights/: best.pt
